k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopcloud
  labels:
    name: shopcloud
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: keda
  labels:
    name: keda
---
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    name: external-secrets
