k8s/base/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: shopcloud
spec:
  podSelector: {}
  policyTypes: ["Ingress", "Egress"]
